// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package AuthorizationService;

// The greeting service definition.
service UserDirectory {
  // Sends a greeting
  rpc GetUsersData (UsersIds) returns (UsersModel) {}
}

message UsersModel{
    repeated UserModel Users = 1;
}
// The request message containing the user's name.
message UserModel {
  string id = 1;
  string normialized_name = 2;
  string username = 3;
  string email = 4;
  string picture_url=5;
}

message UsersIds {
    repeated string userId = 1;
}