syntax = "proto3";

package AuthorizationService.Grpc;
import "google/protobuf/wrappers.proto";

service UsersGrpc {
  rpc GetUsersData (UsersIdsModel) returns (UsersModel) {};
    
  rpc CalculateDistance(CalculateDistanceRequest) returns(DistancesResponse) {};
}

message UsersModel{
    repeated UserModel Users = 1;
}

// The User response DTO
message UserModel {
  string id = 1;
  google.protobuf.StringValue username = 2;
  google.protobuf.StringValue name= 3;
  google.protobuf.StringValue email = 4;
  google.protobuf.StringValue picture_url=5;
}

message UsersIdsModel {
    repeated string UsersIds = 1;
}

message DistanceModel{
    google.protobuf.DoubleValue distance = 1;
    string user_id = 2;
}

message DistancesResponse{
    repeated DistanceModel distances = 1;
}

message UserIdModel{
    string user_id = 1;
}

message CalculateDistanceRequest{
    repeated string user_ids = 1;
    string the_user_id = 2;
}